# solana-ua-bootcamp-2025-03-19

./: index.html
assets/: index-CDITZL9W.js  index-D9Obdm1K.js  index-Fgs4B1Ss.css  index-tSakudvu.css
practice-3/lesson_2.8-on-rust-1-6/: .env  Anchor.toml
practice-3/lesson_2.8-on-rust-1-6/programs/on-rust-1-6/: Cargo.toml
practice-3/lesson_2.8-on-rust-1-6/programs/on-rust-1-6/src/: create_token_account.rs  create_token_metadata.rs  create_token_mint.rs  main.rs  mint_tokens.rs  send_sol.rs
practice-3/lesson_2.8-on-rust-1-6/tests/: on-rust-1-6.test.js
practice-4/favorites_update/: Anchor.toml  Cargo.toml
practice-4/favorites_update/programs/favorites/: Cargo.toml
practice-4/favorites_update/programs/favorites/src/: lib.rs
practice-4/favorites_update/tests/: favorites.test.ts
practice-6/custom-key-gen/: README.md  package-lock.json  package.json
practice-6/custom-key-gen/src/: App.tsx
